--- a/get-number-of-apples/index.html
+++ b/get-number-of-apples/index.html
@@ -1,3 +1,21 @@
-function getNumberOfApples(n, p) {
-	return Math.floor(n * (100 - parseInt(p)) / 100) || "The children did't get any apple";
-}
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<title>Free Coffee Cups</title>
+	<meta name="author" content="">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
+	<script>
+	function getNumberOfApples(n, p) {
+		return Math.floor(n * (100 - parseInt(p)) / 100) || "The children did't get any apple";
+	}
+	</script>
+</body>
+
+</html>
